force-app/main/default/objects/My_Class__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Request_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Request Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Request_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Request Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CBSE</fullName>
                </value>
                <value>
                    <fullName>RBSE</fullName>
                </value>
                <value>
                    <fullName>ICSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Actions_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Actions Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_school__c</fullName>
        <label>My school</label>
        <referenceTo>My_school__c</referenceTo>
        <relationshipLabel>My Classes</relationshipLabel>
        <relationshipName>My_Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Submitted_For_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Students__c</fullName>
        <label># of Students</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>My Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>My Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Classes</pluralLabel>
    <recordTypes>
        <fullName>CBSE</fullName>
        <active>true</active>
        <label>CBSE</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT_1</fullName>
        <active>true</active>
        <label>RT-1</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>